--- a/lesson_2_homework/index.html
+++ b/lesson_2_homework/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
    <meta charset="UTF-8">
@@ -51,7 +51,6 @@
          Я люблю своє місто. Але є одне але... Моя сім'я приїхала в Миколаїв у кінці 70 років. А родом ми з
          невеликого села Космирин, Бучачцького району. Тернопільської області. І все життя душею я був більше там ніж
          в рідному місці.
-         </p>
          <p><mark>Але війна все змінила.</mark><br>
             З першоно дня війни я зрозумів, що насправді я дуже люблю свій край і не хочу нікуди їхати. Тому я лишився
             на деякий час в Миколаєві, вивезши свою родину до села в Миколаївській області. Згодом я теж приїхав до них,
