--- a/lesson_2_homework/index.html
+++ b/lesson_2_homework/index.html
@@ -88,13 +88,13 @@
       </div>
       <div class="additional-info" id="additional-info">
          Підписуйтесь на мої профілі в соціальних мережах. Може комусь буде цікаво☺<br>
-         <a target="_blank" href="https://twitter.com/vitfreelancer"><img title="Twitter Account" width="30px"
+         <a target="_blank" href="https://twitter.com/vitfreelancer"><img title="Twitter Account" width="30"
                src="img/icons/twitter.png" alt="Twitter Icon"></a>
 
-         <a target="_blank" href="https://www.facebook.com/artdor2"><img title="Facebook Account" width="30px"
+         <a target="_blank" href="https://www.facebook.com/artdor2"><img title="Facebook Account" width="30"
                src="img/icons/facebook.png" alt="Facebook Icon"></a>
 
-         <a target="_blank" href="https://instagram.com/vitfreelancer"><img title="Instagram Account" width="30px"
+         <a target="_blank" href="https://instagram.com/vitfreelancer"><img title="Instagram Account" width="30"
                src="img/icons/instagram.png" alt="Instagram Icon"></a>
       </div>
    </main>
