--- a/lesson_8/index.html
+++ b/lesson_8/index.html
@@ -229,9 +229,9 @@
    </main>
    <footer>
       <div class="lesson-title">
-         <h1>
+         <span>
             End of Lesson #8 Homework
-         </h1>
+         </span>
       </div>
    </footer>
 </body>
