--- a/lesson_12/index.html
+++ b/lesson_12/index.html
@@ -307,7 +307,10 @@
                   </div>
                </div>
             </div>
-            <div class="additional-text">
+
+         </div>
+         <div class="additional-text text-additional">
+            <div class="text-additional__content">
                <p class="additional-text__paragraph">
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et modi at voluptatibus, qui minima enim,
                   autem
