--- a/lesson_14/index.html
+++ b/lesson_14/index.html
@@ -65,6 +65,9 @@
                </div>
             </div>
          </div>
+         <div class="rectangle">
+            
+         </div>
       </main>
       <footer class="footer__container">
          <h2 class="title">
